[gd_scene load_steps=13 format=3 uid="uid://e66fd4b578w4"]

[ext_resource type="PackedScene" uid="uid://bww58mn12tq4o" path="res://player/player.tscn" id="4_j1xn2"]
[ext_resource type="PackedScene" uid="uid://b41bff1dg5h76" path="res://levels/level2/level2_scene.tscn" id="5_1qud5"]
[ext_resource type="PackedScene" uid="uid://hjd060tsaiy" path="res://player/player2.tscn" id="5_5s11d"]
[ext_resource type="Script" path="res://spawner/spawner_manager.gd" id="6_2vkav"]
[ext_resource type="PackedScene" uid="uid://d1r3n3c6vecbe" path="res://time_manager/time_manager.tscn" id="6_pnylx"]
[ext_resource type="PackedScene" uid="uid://bcj7c5qs7gxvp" path="res://spawner/spawner.tscn" id="7_s0hig"]

[sub_resource type="Curve2D" id="Curve2D_7vpxj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivsq4"]
size = Vector2(1312, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjnl6"]
size = Vector2(80, 3000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmqqv"]
size = Vector2(80, 3000)

[sub_resource type="GDScript" id="GDScript_akkx6"]
script/source = "extends Area2D


func _on_body_entered(body: Node2D) -> void:
	if is_instance_of(body, Pie):
		body.queue_free()
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfuy0"]
size = Vector2(1312, 80)

[node name="main2" type="Node"]

[node name="Level" parent="." instance=ExtResource("5_1qud5")]

[node name="plateform1" parent="Level" index="1"]
process_mode = 4

[node name="Level_plateform_AnimatableBody2D#RemoteTransform2D" type="RemoteTransform2D" parent="Level/plateform1/AnimatableBody2D" index="3"]
position = Vector2(22.1319, -167.857)
scale = Vector2(3.69898, 3.69898)
remote_path = NodePath("../../../../Spawners/SpawnerRight")

[node name="PathFollow1" parent="Level/AnimatedPlatform" index="0"]
position = Vector2(969.745, 186.753)
progress = 1751.81

[node name="PathFollow2" parent="Level/AnimatedPlatform" index="1"]
position = Vector2(25, 146)
progress = 0.0

[node name="Platform1" parent="Level/AnimatedPlatform" index="2"]
position = Vector2(969.747, 186.752)

[node name="RemoteSpawner1" type="RemoteTransform2D" parent="Level/AnimatedPlatform/Platform1" index="2"]
position = Vector2(-1.50985, -96.5049)
remote_path = NodePath("../../../../Spawners/SpawnerMidle")

[node name="Platform2" parent="Level/AnimatedPlatform" index="3"]
position = Vector2(25, 146)

[node name="RemoteSpawner2" type="RemoteTransform2D" parent="Level/AnimatedPlatform/Platform2" index="2"]
position = Vector2(-6.23501, -106.808)
remote_path = NodePath("../../../../Spawners/SpawnerRight")

[node name="Players" type="Node2D" parent="."]

[node name="Player" parent="Players" instance=ExtResource("4_j1xn2")]
position = Vector2(136, -9)

[node name="Player2" parent="Players" instance=ExtResource("5_5s11d")]
position = Vector2(925, -42)
player_index = 1

[node name="pie_spawn_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_7vpxj")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="Bounds" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Floor" type="StaticBody2D" parent="Bounds"]
position = Vector2(576, 688)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Floor"]
shape = SubResource("RectangleShape2D_ivsq4")
debug_color = Color(0, 0.643137, 0.333333, 0.419608)
metadata/_edit_lock_ = true

[node name="LeftWall" type="StaticBody2D" parent="Bounds"]
position = Vector2(-40, -852)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/LeftWall"]
shape = SubResource("RectangleShape2D_mjnl6")
debug_color = Color(0.796078, 0.619608, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="RightWall" type="StaticBody2D" parent="Bounds"]
position = Vector2(1192, -852)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/RightWall"]
shape = SubResource("RectangleShape2D_kmqqv")
debug_color = Color(0.796078, 0.619608, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="PieCatcher" type="Area2D" parent="Bounds"]
position = Vector2(576, -2392)
script = SubResource("GDScript_akkx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/PieCatcher"]
shape = SubResource("RectangleShape2D_rfuy0")
debug_color = Color(0, 0.643137, 0.333333, 0.419608)
metadata/_edit_lock_ = true

[node name="Spawners" type="Node" parent="."]
script = ExtResource("6_2vkav")
spawner_paths = Array[NodePath]([NodePath("SpawnerRight"), NodePath("SpawnerMidle")])

[node name="SpawnerMidle" parent="Spawners" instance=ExtResource("7_s0hig")]
position = Vector2(933.086, 182.368)
scale = Vector2(0.236505, 0.240885)

[node name="pie_spawn_timer" type="Timer" parent="Spawners"]
wait_time = 2.0

[node name="SpawnerRight" parent="Spawners" instance=ExtResource("7_s0hig")]
position = Vector2(104.424, 143.528)
scale = Vector2(0.236505, 0.240885)

[node name="TimeManager" parent="." instance=ExtResource("6_pnylx")]

[connection signal="timeout" from="pie_spawn_timer" to="." method="_on_pie_timer_timeout"]
[connection signal="body_entered" from="Bounds/PieCatcher" to="Bounds/PieCatcher" method="_on_body_entered"]
[connection signal="created" from="Spawners/SpawnerMidle" to="Spawners" method="_on_pie_created"]
[connection signal="timeout" from="Spawners/pie_spawn_timer" to="Spawners" method="_on_pie_spawn_timer_timeout"]
[connection signal="created" from="Spawners/SpawnerRight" to="Spawners" method="_on_pie_created"]

[editable path="Level"]
[editable path="Level/plateform1"]
[editable path="Level/AnimatedPlatform"]
